# pokey_voice_coding_videos

./: dvc.yaml  pyproject.toml
.dvc/: config
data/interim/markdown-scope-types/: .gitignore
data/processed/advent-of-code-by-voice-7/: .gitignore  Advent of code by voice day 7.mov.dvc
data/processed/cursorless-golf-round-i/: .gitignore  Cursorless golf round I.mov.dvc
data/processed/cursorless-internals-walkthrough-part-ii/: .gitignore  Cursorless Internals Walkthrough Part II.mp4.dvc
data/processed/cursorless-mathfly/: .gitignore  Cursorless mathfly.mov.dvc
data/processed/cursorless-scope-sidebar-take-iii/: .gitignore  Cursorless scope sidebar.mov.dvc
data/processed/cursorless-snippets/: .gitignore  Cursorless snippets.mov.dvc
data/processed/explainer-advent-of-code-by-voice/: .gitignore  Explainer advent of code by voice day 7.mov.dvc
data/processed/hacking-the-scope-visualizer/: .gitignore  Hacking the scope visualizer.mov.dvc
data/processed/human-after-all-demo/: .gitignore  Human after all display version.mov.dvc  Human after all speaker version.mov.dvc
data/processed/instance/: .gitignore  instance.mov.dvc
data/processed/interactive-tutorial/: .gitignore  Interactive tutorial.mov.dvc
data/processed/keyboard-parser/: .gitignore  Keyboard parser.mov.dvc
data/processed/keyboard-state-machine/: .gitignore  Keyboard state machine.mov.dvc
data/processed/markdown-scope-types/: .gitignore  (+1 more)
scripts/: free-storage.sh  index-template.toml  resize.sh  setup-thumbnail-pipeline.sh  setup-video-pipeline.sh
tests/: test_pokey_voice_coding_videos.py
(+153 files in other folders)
