[tool.poetry]
name = "pokey_voice_coding_videos"
version = "0.1.0"
description = ""
authors = ["Pokey Rule <755842+pokey@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
voice-vid = { git = "git@github.com:pokey/voice_vid.git", branch = "main", python = ">=3.10,<3.11" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
